--- a/LuGradesBot/LuGradesBot.csproj
+++ b/LuGradesBot/LuGradesBot.csproj
@@ -61,9 +61,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Globals.cs" />
-    <Compile Include="Login.cs" />
+    <Compile Include="Services\Login.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GradesParser.cs" />
+    <Compile Include="Services\IGradesParser.cs" />
     <Compile Include="Services\ILogin.cs" />
   </ItemGroup>
   <ItemGroup>
