--- a/LuGradesBot.Forms/LuGradesBot.Forms.csproj
+++ b/LuGradesBot.Forms/LuGradesBot.Forms.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Grade.cs" />
+    <Compile Include="Models\Grade.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
